[package]
name = "pmx_util"
version = "0.8.2"
authors = ["t18b219k"]
edition = "2018"
repository = "https://github.com/t18b219k/PMXUtil"
keywords = ["mmd","pmx"]
license="MIT OR Apache-2.0"
documentation = "https://docs.rs/PMXUtil"
description = "A simple pmx reader and writer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
encoding_rs="0.8"

